@@ -3,264 +3,316 @@ package com.catadmirer.infuseSMP.bukkit.commands;
 import com.catadmirer.infuseSMP.Message;
 import com.catadmirer.infuseSMP.Message.MessageType;
 import com.catadmirer.infuseSMP.bukkit.InfusePlugin;
+import com.catadmirer.infuseSMP.bukkit.effects.BukkitEffect;
 import com.catadmirer.infuseSMP.bukkit.inventories.EffectChooser;
 import com.catadmirer.infuseSMP.bukkit.inventories.RecipeListGUI;
+import com.catadmirer.infuseSMP.bukkit.managers.EffectManager;
+import com.catadmirer.infuseSMP.bukkit.util.CustomArgumentTypes;
 import com.catadmirer.infuseSMP.effects.InfuseEffect;
 import com.catadmirer.infuseSMP.managers.CooldownManager;
-
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Stream;
-
-import org.bukkit.Bukkit;
-import org.bukkit.command.Command;
-import org.bukkit.command.CommandExecutor;
+import com.mojang.brigadier.context.CommandContext;
+import com.mojang.brigadier.exceptions.CommandSyntaxException;
+import com.mojang.brigadier.tree.LiteralCommandNode;
+import io.papermc.paper.command.brigadier.CommandSourceStack;
+import io.papermc.paper.command.brigadier.Commands;
+import io.papermc.paper.command.brigadier.argument.ArgumentTypes;
+import io.papermc.paper.command.brigadier.argument.resolvers.selector.PlayerSelectorArgumentResolver;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.format.NamedTextColor;
 import org.bukkit.command.CommandSender;
-import org.bukkit.command.TabCompleter;
 import org.bukkit.entity.Player;
-import org.jspecify.annotations.NonNull;
+import org.bukkit.persistence.PersistentDataType;
+import org.jspecify.annotations.Nullable;
 
-public class InfuseCommand implements CommandExecutor, TabCompleter {
+import java.util.List;
+
+public class InfuseCommand {
     private final InfusePlugin plugin;
+    
+    public static LiteralCommandNode<CommandSourceStack> build(InfusePlugin plugin) {
+        InfuseCommand cmd = new InfuseCommand(plugin);
+
+        return Commands.literal("infuse")
+            .then(Commands.literal("gui")
+                .requires(c -> c.getSender().hasPermission("infuse.gui") && (c.getSender() instanceof Player))
+                .executes(cmd::gui)
+            )
+            .then(Commands.literal("reload")
+                .requires(c -> c.getSender().hasPermission("infuse.reload") )
+                .executes(cmd::reload)
+            )
+            .then(Commands.literal("reroll")
+                .requires(c -> c.getSender().hasPermission("infuse.reroll"))
+                .executes(c -> cmd.reroll(c, null))
+                .then(Commands.argument("target", ArgumentTypes.players())
+                    .executes(c -> cmd.reroll(c, c.getArgument("target", PlayerSelectorArgumentResolver.class)))
+                )
+            )
+            .then(Commands.literal("recipes")
+                .requires(c -> c.getSender().hasPermission("infuse.recipes"))
+                .executes(InfuseCommand::recipes)
+            )
+            .then(Commands.literal("giveeffect")
+                .requires(c -> c.getSender().hasPermission("infuse.giveeffect"))
+                .then(Commands.argument("target", ArgumentTypes.player())
+                    .then(Commands.argument("effect", CustomArgumentTypes.BUKKIT_EFFECT)
+                        .executes(c -> cmd.giveEffect(c, c.getArgument("target", PlayerSelectorArgumentResolver.class), c.getArgument("effect", BukkitEffect.class)))
+                    )
+                )
+            )
+            .then(Commands.literal("seteffect")
+                .requires(c -> c.getSender().hasPermission("infuse.seteffect"))
+                .then(Commands.argument("target", ArgumentTypes.player())
+                    .then(Commands.argument("effect", CustomArgumentTypes.BUKKIT_EFFECT)
+                        .then(Commands.argument("slot", CustomArgumentTypes.SLOT)
+                            .executes(c -> cmd.setEffect(c, c.getArgument("target", PlayerSelectorArgumentResolver.class), c.getArgument("effect", InfuseEffect.class), c.getArgument("slot", String.class)))
+                        )
+                    )
+                )
+            )
+            .then(Commands.literal("cleareffects")
+                .requires(c -> c.getSender().hasPermission("infuse.cleareffects"))
+                .executes(c -> cmd.clearEffects(c, null))
+                .then(Commands.argument("target", ArgumentTypes.player())
+                    .executes(c -> cmd.clearEffects(c, c.getArgument("target", PlayerSelectorArgumentResolver.class)))
+                )
+            )
+            .then(Commands.literal("cooldown")
+                .requires(c -> c.getSender().hasPermission("infuse.cooldown"))
+                .then(Commands.argument("target", ArgumentTypes.player())
+                    .executes(c -> cmd.cooldown(c, c.getArgument("target", PlayerSelectorArgumentResolver.class)))
+                )
+            )
+            .then(Commands.literal("controls")
+                .requires(c -> c.getSender().hasPermission("infuse.controls") && c.getSender() instanceof Player)
+                .then(Commands.argument("choice", CustomArgumentTypes.CONTROL_MODE)
+                    .executes(c -> cmd.controls(c, c.getArgument("choice", String.class)))
+                )
+            )
+            .then(Commands.literal("help")
+                .requires(c -> c.getSender().hasPermission("infuse.help"))
+                .executes(cmd::help)
+            )
+            .build();
+    }
 
     public InfuseCommand(InfusePlugin plugin) {
         this.plugin = plugin;
     }
 
-    @Override
-    public boolean onCommand(@NonNull CommandSender sender, @NonNull Command command, @NonNull String label, String @NonNull [] args) {
+    public int gui(CommandContext<CommandSourceStack> ctx) {
+        CommandSender sender = ctx.getSource().getSender();
+
         if (!(sender instanceof Player player)) {
-            return true;
+            sender.sendMessage(Component.text("Only players can use this command", NamedTextColor.RED));
+            return 1;
         }
 
-        if (args.length == 0) {
-            player.sendMessage(new Message(MessageType.INFUSE_INVALID_PARAM).toComponent());
-            return true;
-        }
-
-        Player target;
-        String effectKey;
-        InfuseEffect effect;
-        Message msg;
-        switch (args[0].toLowerCase()) {
-            case "gui":
-                if (!player.isOp()) {
-                    player.sendMessage(new Message(MessageType.ERROR_NOT_OP).toComponent());
-                    return true;
-                }
-
-                player.openInventory(new EffectChooser(plugin).getInventory());
-                break;
-
-            case "reload":
-                if (!player.isOp()) {
-                    player.sendMessage(new Message(MessageType.ERROR_NOT_OP).toComponent());
-                    return true;
-                }
-
-                plugin.getMainConfig().load();
-                plugin.getRecipeManager().reload();
-
-                player.sendMessage("Infuse configs reloaded");
-                break;
-            case "recipes":
-                player.openInventory(new RecipeListGUI().getInventory());
-                break;
-            case "giveeffect":
-                if (!player.isOp()) {
-                    player.sendMessage(new Message(MessageType.ERROR_NOT_OP).toComponent());
-                    return true;
-                }
-
-                if (args.length != 3) {
-                    player.sendMessage(new Message(MessageType.INFUSE_GIVEEFFECT_USAGE).toComponent());
-                    return true;
-                }
-
-                target = Bukkit.getPlayer(args[1]);
-                if (target == null || !target.isOnline()) {
-                    player.sendMessage(new Message(MessageType.ERROR_TARGET_NOT_FOUND).toComponent());
-                    return true;
-                }
-
-                effectKey = args[2].toLowerCase();
-                effect = InfuseEffect.fromString(effectKey);
-                if (effect == null) {
-                    player.sendMessage(new Message(MessageType.INFUSE_INVALID_PARAM).toComponent());
-                    return true;
-                }
-
-                target.getInventory().addItem(effect.createItem());
-
-                msg = new Message(MessageType.INFUSE_GIVEEFFECT_SUCCESS);
-                msg.applyPlaceholder("effect_color", "<#" + Integer.toHexString(effect.potionColor().getRGB() & 0xffffff) + ">");
-                msg.applyPlaceholder("effect_name", effect.getName());
-                target.sendMessage(msg.toComponent());
-                break;
-            case "seteffect":
-                if (!player.isOp()) {
-                    player.sendMessage(new Message(MessageType.ERROR_NOT_OP).toComponent());
-                    return true;
-                }
-
-                if (args.length != 4) {
-                    player.sendMessage(new Message(MessageType.INFUSE_SETEFFECT_USAGE).toComponent());
-                    return true;
-                }
-
-                // Getting the player and making sure they are online.
-                target = Bukkit.getPlayer(args[1]);
-                if (target == null || !target.isOnline()) {
-                    player.sendMessage(new Message(MessageType.ERROR_TARGET_NOT_FOUND).toComponent());
-                    return true;
-                }
-
-                // Getting the effect key and verifying its integrity.
-                effectKey = args[2].toLowerCase();
-                effect = InfuseEffect.fromString(effectKey);
-                if (effect == null) {
-                    player.sendMessage(new Message(MessageType.INFUSE_INVALID_PARAM).toComponent());
-                    return true;
-                }
-
-                // Getting the slot to put the effect into and validating it.
-                String slot = args[3];
-                if (!slot.equals("1") && !slot.equals("2")) {
-                    msg = new Message(MessageType.INFUSE_INVALID_SLOT);
-                    msg.applyPlaceholder("slot", slot);
-                    player.sendMessage(msg.toComponent());
-                    return true;
-                }
-
-                // Setting the effect
-                plugin.getEffectManager().setEffect(target, effect, args[3]);
-                msg = new Message(MessageType.INFUSE_SETEFFECT_SUCCESS);
-                msg.applyPlaceholder("slot", slot);
-                msg.applyPlaceholder("player_name", target.getName());
-                msg.applyPlaceholder("effect_name", effect.getName());
-                player.sendMessage(msg.toComponent());
-                break;
-            case "cleareffects":
-                if (!player.isOp()) {
-                    player.sendMessage(new Message(MessageType.ERROR_NOT_OP).toComponent());
-                    return true;
-                }
-
-                if (args.length != 2) {
-                    player.sendMessage(new Message(MessageType.INFUSE_CLEAREFFECTS_USAGE).toComponent());
-                    return true;
-                }
-
-                // Getting the player and making sure they are online
-                target = Bukkit.getPlayer(args[1]);
-                if (target == null || !target.isOnline()) {
-                    player.sendMessage(new Message(MessageType.ERROR_TARGET_NOT_FOUND).toComponent());
-                    return true;
-                }
-
-                // Removing the effects from the player
-                plugin.getEffectManager().unequipEffect(target, "1");
-                plugin.getEffectManager().unequipEffect(target, "2");
-                msg = new Message(MessageType.INFUSE_CLEAREFFECTS_SUCCESS);
-                msg.applyPlaceholder("player_name", target.getName());
-                player.sendMessage(msg.toComponent());
-                break;
-            case "cooldown":
-                if (!player.isOp()) {
-                    player.sendMessage(new Message(MessageType.ERROR_NOT_OP).toComponent());
-                    return true;
-                }
-
-                if (args.length != 2) {
-                    player.sendMessage(new Message(MessageType.INFUSE_COOLDOWN_USAGE).toComponent());
-                    return true;
-                }
-
-                // Getting the player and making sure they are online
-                target = Bukkit.getPlayer(args[1]);
-                if (target == null || !target.isOnline()) {
-                    player.sendMessage(new Message(MessageType.ERROR_TARGET_NOT_FOUND).toComponent());
-                    return true;
-                }
-
-                // Removing cooldowns from the player
-                CooldownManager.removeAllCooldowns(target.getUniqueId());
-                msg = new Message(MessageType.INFUSE_COOLDOWN_SUCCESS);
-                msg.applyPlaceholder("player_name", target.getName());
-                player.sendMessage(msg.toComponent());
-                break;
-            case "controls":
-                if (args.length != 2) {
-                    player.sendMessage(new Message(MessageType.INFUSE_CONTROLS_USAGE).toComponent());
-                    return true;
-                }
-
-                // Getting the control mode and validating the input.
-                String choice = args[1].toLowerCase();
-                if (!choice.equals("offhand") && !choice.equals("command")) {
-                    player.sendMessage(new Message(MessageType.INFUSE_CONTROLS_USAGE).toComponent());
-                    return true;
-                }
-
-                // Setting the control mode for the user.
-                plugin.getDataManager().setControlMode(player.getUniqueId(), choice);
-
-                // Assigning the permission for offhand use if the user chose offhand mode
-                boolean offhandEnabled = choice.equalsIgnoreCase("offhand");
-                player.addAttachment(plugin, "ability.use", !offhandEnabled);
-
-                msg = new Message(MessageType.INFUSE_CONTROLS_SUCCESS);
-                msg.applyPlaceholder("control_mode", choice);
-                player.sendMessage(msg.toComponent());
-                break;
-            default:
-                sender.sendMessage(new Message(MessageType.INFUSE_INVALID_PARAM).toComponent());
-                break;
-        }
-
-        return true;
+        player.openInventory(new EffectChooser(plugin).getInventory());
+        return 1;
     }
 
+    public int reload(CommandContext<CommandSourceStack> ctx) {
+        CommandSender sender = ctx.getSource().getSender();
 
-    @Override
-    public List<String> onTabComplete(@NonNull CommandSender sender, @NonNull Command command, @NonNull String alias, String[] args) {
-        if (args.length == 1) {
-            List<String> completions = new ArrayList<>(Arrays.asList("recipes", "controls"));
+        plugin.getMainConfig().load();
+        plugin.getRecipeManager().reload();
+        sender.sendMessage("Infuse configs reloaded");
+        return 1;
+    }
 
-            if (sender.isOp()) {
-                completions.addAll(Arrays.asList("gui", "reload", "giveEffect", "setEffect", "clearEffects", "cooldown"));
+    public int reroll(CommandContext<CommandSourceStack> ctx, @Nullable PlayerSelectorArgumentResolver resolver) {
+        CommandSender sender = ctx.getSource().getSender();
+
+        List<Player> targets;
+        if (resolver == null) {
+            if (sender instanceof Player p) {
+                targets = List.of(p);
+            } else {
+                sender.sendMessage(Component.text("Invalid target.  Please specify a player to reroll.", NamedTextColor.RED));
+                return 1;
             }
-
-            return completions.stream().filter(s -> s.toLowerCase().startsWith(args[0].toLowerCase())).sorted().toList();
-        }
-
-        if (args.length == 2) {
-            switch (args[0].toLowerCase()) {
-                case "controls":
-                    return Stream.of("offhand", "command").filter(s -> s.toLowerCase().startsWith(args[1].toLowerCase())).toList();
-                case "giveeffect":
-                case "seteffect":
-                case "cleareffects":
-                case "cooldown":
-                    if (!sender.isOp()) return List.of();
-                    return Bukkit.getOnlinePlayers().stream().map(Player::getName).filter(s -> s.toLowerCase().startsWith(args[1].toLowerCase())).toList();
-            }
-        }
-
-        if (args.length == 3) {
-            switch(args[0].toLowerCase()) {
-                case "giveeffect":
-                case "seteffect":
-                    if (!sender.isOp()) return List.of();
-                    return InfuseEffect.getRegisteredEffects().values().stream().map(InfuseEffect::toString).filter(key -> key.toLowerCase().startsWith(args[2].toLowerCase())).toList();
+        } else {
+            try {
+                targets = resolver.resolve(ctx.getSource());
+            } catch (CommandSyntaxException e) {
+                sender.sendMessage(InfusePlugin.mcs.deserialize(e.getRawMessage()));
+                return 1;
             }
         }
 
-        if (args.length == 4 && args[0].equalsIgnoreCase("setEffect") && sender.isOp()) {
-            return Stream.of("1", "2").filter(key -> key.toLowerCase().startsWith(args[2].toLowerCase())).toList();
+        EffectManager manager = plugin.getEffectManager();
+
+        // Looping over the players
+        for (Player p : targets) {
+            manager.removeEffects(p);
+            EffectManager.EquipResult result = manager.giveJoinEffect(p);
+            if (result.type() == EffectManager.EquipResultType.FAIL) {
+                sender.sendMessage(Component.text("There are no join effects in the config.", NamedTextColor.RED));
+                return 1;
+            } else if (result.type() == EffectManager.EquipResultType.CANCELLED) {
+                sender.sendMessage(Component.text("giveJoinEffects was cancelled for player " + p.getName(), NamedTextColor.RED));
+            }
+            p.getPersistentDataContainer().set(InfusePlugin.JOIN_EFFECT_KEY, PersistentDataType.BOOLEAN, true);
         }
 
-        return List.of();
+        // Sending feedback
+        if (targets.size() == 1) {
+            sender.sendMessage(Component.text("Rerolled " + targets.getFirst() + "'s join effect."));
+        } else {
+            sender.sendMessage(Component.text("Rerolled " + targets.size() + " player's join effects."));
+        }
+
+        return 1;
+    }
+
+    public int giveEffect(CommandContext<CommandSourceStack> ctx, PlayerSelectorArgumentResolver resolver, BukkitEffect effect) {
+        CommandSender sender = ctx.getSource().getSender();
+
+        Player target;
+        try {
+            target = resolver.resolve(ctx.getSource()).getFirst();
+        } catch (CommandSyntaxException err) {
+            sender.sendMessage(InfusePlugin.mcs.deserialize(err.getRawMessage()));
+            return 1;
+        }
+
+        if (!target.isOnline()) {
+            sender.sendMessage(new Message(MessageType.ERROR_TARGET_NOT_FOUND).toComponent());
+            return 1;
+        }
+
+        if (effect == null) {
+            sender.sendMessage(new Message(MessageType.INFUSE_INVALID_PARAM).toComponent());
+            return 1;
+        }
+
+        target.getInventory().addItem(effect.createItem());
+
+        Message msg = new Message(MessageType.INFUSE_GIVEEFFECT_SUCCESS);
+        msg.applyPlaceholder("effect_color", "<#" + Integer.toHexString(effect.potionColor().getRGB() & 0xffffff) + ">");
+        msg.applyPlaceholder("effect_name", effect.getName());
+        target.sendMessage(msg.toComponent());
+        
+        return 1;
+    }
+    
+    public int setEffect(CommandContext<CommandSourceStack> ctx, PlayerSelectorArgumentResolver resolver, InfuseEffect effect, String slot) {
+        CommandSender sender = ctx.getSource().getSender();
+
+        Player target;
+        
+        try {
+            target = resolver.resolve(ctx.getSource()).getFirst();
+        } catch (CommandSyntaxException err) {
+            sender.sendMessage(InfusePlugin.mcs.deserialize(err.getRawMessage()));
+            return 1;
+        }
+        
+        if (effect == null) {
+            sender.sendMessage(new Message(MessageType.INFUSE_INVALID_PARAM).toComponent());
+            return 1;
+        }
+        
+        // Setting the effect
+        plugin.getEffectManager().setEffect(target, effect, slot);
+        Message msg = new Message(MessageType.INFUSE_SETEFFECT_SUCCESS);
+        msg.applyPlaceholder("slot", slot);
+        msg.applyPlaceholder("player_name", target.getName());
+        msg.applyPlaceholder("effect_name", effect.getName());
+        sender.sendMessage(msg.toComponent());
+
+        return 1;
+    }
+    
+    public int clearEffects(CommandContext<CommandSourceStack> ctx, @Nullable PlayerSelectorArgumentResolver resolver) {
+        CommandSender sender = ctx.getSource().getSender();
+
+        // Getting the player and making sure they are online
+        Player target;
+        try {
+            target = resolver.resolve(ctx.getSource()).getFirst();
+        } catch (CommandSyntaxException e) {
+            sender.sendMessage(InfusePlugin.mcs.deserialize(e.getRawMessage()));
+            return 1;
+        } catch (NullPointerException e) {
+            if (sender instanceof Player p) {
+                target = p;
+            } else {
+                sender.sendMessage(Component.text("Invalid target.  Please specify a player.", NamedTextColor.RED));
+                return 1;
+            }
+        }
+
+        // Removing the effects from the player
+        plugin.getEffectManager().removeEffects(target);
+        Message msg = new Message(MessageType.INFUSE_CLEAREFFECTS_SUCCESS);
+        msg.applyPlaceholder("player_name", target.getName());
+        sender.sendMessage(msg.toComponent());
+
+        return 1;
+    }
+    
+    public int cooldown(CommandContext<CommandSourceStack> ctx, PlayerSelectorArgumentResolver resolver) {
+        CommandSender sender = ctx.getSource().getSender();
+
+        // Getting the player and making sure they are online
+        Player target;
+        try {
+            target = resolver.resolve(ctx.getSource()).getFirst();
+        } catch (CommandSyntaxException err) {
+            sender.sendMessage(InfusePlugin.mcs.deserialize(err.getRawMessage()));
+            return 1;
+        }
+
+        if (!target.isOnline()) {
+            sender.sendMessage(new Message(MessageType.ERROR_TARGET_NOT_FOUND).toComponent());
+            return 1;
+        }
+
+        // Removing cooldowns from the player
+        CooldownManager.removeAllCooldowns(target.getUniqueId());
+        Message msg = new Message(MessageType.INFUSE_COOLDOWN_SUCCESS);
+        msg.applyPlaceholder("player_name", target.getName());
+        sender.sendMessage(msg.toComponent());
+
+        return 1;
+    }
+
+    public int controls(CommandContext<CommandSourceStack> ctx, String choice) {
+        CommandSender sender = ctx.getSource().getSender();
+
+        if (!(sender instanceof Player player)) {
+            sender.sendMessage(Component.text("Only players can use this command", NamedTextColor.RED));
+            return 1;
+        }
+
+        // Setting the control mode for the user.
+        plugin.getDataManager().setControlMode(player.getUniqueId(), choice);
+
+        // Assigning the permission for offhand use if the user chose offhand mode
+        boolean offhandEnabled = choice.equalsIgnoreCase("offhand");
+        sender.addAttachment(plugin, "ability.use", !offhandEnabled);
+
+        Message msg = new Message(MessageType.INFUSE_CONTROLS_SUCCESS);
+        msg.applyPlaceholder("control_mode", choice);
+        sender.sendMessage(msg.toComponent());
+
+        return 1;
+    }
+
+    public static int recipes(CommandContext<CommandSourceStack> ctx) {
+        if (ctx.getSource().getSender() instanceof Player player) {
+            player.openInventory(new RecipeListGUI().getInventory());
+        }
+        return 1;
+    }
+    
+    public int help(CommandContext<CommandSourceStack> ctx) {
+        CommandSender sender = ctx.getSource().getSender();
+
+        new Message(MessageType.INFUSE_HELP).toComponentList().forEach(sender::sendMessage);
+
+        return 1;
     }
 }
